correction du scroll horizontal en version mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -555,42 +555,21 @@ footer {
 
 .bloc_footer {
     width: 30%;
-    margin-left: 3%;
+    margin-left: 5%;
 }
 
 /*--------------------------------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------------------------*/
-/*--------------------------------------------------------------------------------------------*/
-/*--------------------------------------------
 
-@media only screen and (max-width: 320px){
-}
-
-@media only screen (min-width: 321px) and (max-width: 799px){
-}
-
-@media only screen and (min-width: 800px) and (max-width: 966px){
-}
-
-@media only screen and (min-width: 967px) and (max-width: 1024px){
-}
-
-------------------------------------------------*/
+/*--------------------------------------------------------------------------------------------*/
 
 /*------------- Responsive -----------------*/
 
-@media only screen and (min-width:993px) and (max-width:1024px) {}
-
-
-@media only screen and (max-width: 1500px) {}
-
 @media only screen and (max-width: 992px) {
+
+    body {
+        margin: -27px;
+        width: 102%;
+    }
 
     /* Header */
 
@@ -737,6 +716,8 @@ footer {
         margin: 30px;
     }
 
+    /* Populaires */
+
     .card_group_pop {
         width: 100%;
     }
@@ -745,14 +726,62 @@ footer {
         width: 100%;
     }
 
+    /* Activités */
+
+
+    #card_group_act {
+        width: 100vw;
+        display: flex;
+        justify-content: center;
+    }
+
+    .card_act a {
+        width: 80vw;
+        height: 300px;
+    }
+
+    .card_act_tall a {
+        height: 300px;
+        width: 80vw;
+        margin-bottom: 50px;
+    }
+
+    .card_act_image img {
+        height: 130%;
+        width: 130%;
+    }
+
+    .card_act_image_tall img {
+        height: 130%;
+        width: 130%;
+    }
+
+    .card_act_tall:hover .card_act_image_tall img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .card_act:hover .card_act_image img {
+        height: 100%;
+        width: 100%;
+    }
+
+    #card_pair_1 {
+        max-height: 800px;
+    }
+
+    #card_pair_2 {
+        max-height: 800px;
+    }
+
 }
 
 @media only screen and (max-width: 768px) {
 
 
     body {
-        margin: 0;
-        width: 100%;
+        margin: -17px;
+        width: 102%;
     }
 
     /* Header */
@@ -848,6 +877,8 @@ footer {
     #populaires_title h2 {
         font-size: 2em;
     }
+
+    /* Populaires */
 
     .card_pop {
         width: 100%;
